--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button>Go</button>
+    <button></button>
     <span id="audio"></span>
   </body>
 </html>
